<resources>
    <string name="canvasVersionNum">Version:</string>
    <string name="canvasLogo">Canvas Logo</string>
    <string name="app_name" translatable="false">LearningX Student</string>
    <string name="enterURL">Enter your Canvas URL:</string>
    <string name="exampleURLSimple">myschool.instructure.com</string>
    <string name="signIntoCanvasNetwork">Trying to sign into Canvas Network?</string>
    <string name="mobileVerifyGeneral">This app is not authorized for use</string>
    <string name="mobileVerifyDomainUnauthorized">The server you entered is not authorized for this app.</string>
    <string name="mobileVerifyUserAgentUnauthorized">The user agent for this app is unauthorized.</string>
    <string name="mobileVerifyUnknownError">We were unable to verify the server for use with this app.</string>
    <string name="okay">Okay</string>
    <string name="options">Options</string>
    <string name="discussionAttachment">Attach a file</string>
    <string name="discussionUpload">Upload video or audio</string>
    <string name="discussionPostEditing">Edit</string>
    <string name="removeUser">Remove this user?</string>
    <string name="removedForever">You\'ll have to sign into this user again to access their content.</string>
    <string name="bookmarksTitle">Bookmarks</string>
    <string name="addBookmark">Add Bookmark</string>
    <string name="bookmarkName">Label</string>
    <string name="bookmarkTitleRequired">A Label is Required</string>
    <string name="bookmarkAddedSuccess">Bookmark Created</string>
    <string name="bookmarkAddedFailure">Bookmark could not be created</string>
    <string name="bookmarkShortcut">Select a Bookmark</string>
    <string name="bookmarkDeleted">Bookmark Removed</string>
    <string name="bookmarkDelete">Remove Bookmark?</string>
    <string name="bookmarkEdit">Edit Bookmark</string>
    <string name="bookmarkUpdated">Bookmark Updated</string>
    <string name="no_bookmarks">Create a bookmark then view it here!</string>
    <string name="today">Today</string>
    <string name="past">Past</string>
    <string name="noDate">No Date</string>
    <string name="future">Future</string>
    <string name="next7Days">Next 7 Days</string>
    <string name="days">Days</string>
    <string name="assignmentDue">Due</string>
    <string name="assignmentDueColon">Due: </string>
    <string name="assignmentLastSubmission">Last Submission</string>
    <string name="assignmentNoSubmission">None</string>
    <string name="assignmentTabDetails">Details</string>
    <string name="assignmentTabSubmission">Submissions</string>
    <string name="assignmentTabGrade">Grade</string>
    <string name="assignmentLocked">Locked</string>
    <string name="assignments">Assignments</string>
    <string name="freeFormRubricPoints" formatted="false">%s / %s </string>
    <string name="noRubric">There is no rubric for this assignment.</string>
    <string name="noDescription">There is no description for this assignment</string>
    <string name="noAssignmentsInGroup">No Assignments in this group</string>
    <string name="excusedAssignment">This assignment is excused and will not be considered in the total calculation</string>
    <string name="droppedAssignment">This assignment is dropped and will not be considered in the total calculation</string>
    <string name="excused">EX</string>
    <string name="mutedText">Grades are unavailable because the instructor is working on them.</string>
    <string name="rubricRangePointsText" formatted="false">&#160;to &gt; %s pts</string>
    <string name="contentDescriptionRubricRangePointsText" formatted="false">%s &#160;to &gt; %s points</string>
    <string name="points">Points\u0020</string>
    <string name="assignmentGroup">Assignment Group:\u0020</string>
    <string name="gradingType">Grading Type:\u0020</string>
    <string name="submissionType">Submission Type:\u0020</string>
    <string name="editAssignment">Edit Assignment</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="sendNotification">Notify users that this content has changed</string>
    <string name="forbidden">Replies are only visible to those who have posted at least one reply.</string>
    <string name="Starts">Starts</string>
    <string name="Ends">Ends</string>
    <string name="allDayEvent">All Day Event</string>
    <string name="at">at</string>
    <string name="PersonalCalendar">Personal Calendar</string>
    <string name="noLocation">No Location Specified</string>
    <string name="discussion">Discussions</string>
    <string name="closed_discussion">Closed for Comments</string>
    <string name="discussionUploadDialog">Discussion Upload</string>
    <string name="totalScore">Total:</string>
    <string name="noGradeText">N/A</string>
    <string name="checkBoxFinalGradeOption">Base on graded assignments</string>
    <string name="checkBoxWhatIfGradeOption">Show What-If Score</string>
    <string name="whatIfDialogText">What-If Score</string>
    <string name="inbox">Inbox</string>
    <string name="unread">Unread</string>
    <string name="archived">Archived</string>
    <string name="sent">Sent</string>
    <string name="grade">Grade</string>
    <string name="clearFilter">Clear filter</string>
    <string name="addMessage">Add Message</string>
    <string name="monologue">Monologue</string>
    <string name="noItemsToDisplayShort">No items to display</string>
    <string name="emptyCalendarDate">Nothing Planned For</string>
    <string name="emptyCalendarWeek">Nothing Planned For The Week</string>
    <string name="emptyCalendarMonth">Nothing Planned For The Month</string>
    <string name="selectCanvasCalendars">Select Up To 10 Calendars</string>
    <string name="contentDesc_colored_calendar_indicator">Colored calendar indicator</string>
    <string name="noDatesSelected">Please select a date</string>
    <string name="Todo">To Do</string>
    <string name="Event">Event</string>
    <string name="eventSuccessfulCreation">Event was successfully created</string>
    <string name="eventSuccessfulDeletion">Event was successfully deleted</string>
    <string name="newEvent">New Event</string>
    <string name="enterTitle">Enter Title</string>
    <string name="enterLocation">Enter Location</string>
    <string name="addNote">Add Note</string>
    <string name="titleIconDescription">Title Icon</string>
    <string name="dateIconDescription">Date Icon</string>
    <string name="timeIconDescription">Time Icon</string>
    <string name="locationIconDescription">Location Icon</string>
    <string name="noteIconDescription">Note Icon</string>
    <string name="toDoTurnIn">Turn in</string>
    <string name="toDoNoDueDate">No Due Date</string>
    <string name="dueAt">Due at</string>
    <string name="toDoDue">Due</string>
    <string name="due">Due %1$s</string>
    <plurals name="to_do_needs_grading">
        <item quantity="one">%d needs grading</item>
        <item quantity="other">%d need grading</item>
    </plurals>
    <string name="myFiles">Files</string>
    <string name="createAFolder">Create A Folder</string>
    <string name="createFolder">Create Folder</string>
    <string name="createAFile">Create A File</string>
    <string name="createFileFolderFabContentDesc">Show Create File and Create Folder Buttons</string>
    <string name="folderCreationError">An error occurred during folder creation.</string>
    <string name="rename">Rename</string>
    <string name="renameFile">Rename file</string>
    <string name="renameFolder">Rename folder</string>
    <string name="blankName">Name cannot be blank</string>
    <string name="confirmDeleteFile">Are you sure you want to delete the file \'%s\'? This action cannot be undone.</string>
    <string name="confirmDeleteEmptyFolder">Are you sure you wish to delete the folder \'%s\'? This action cannot be undone.</string>
    <plurals name="confirmDeleteFolder">
        <item quantity="one">Are you sure you wish to delete the folder \'%1$s\', including the %2$d item it contains? This action cannot be undone.</item>
        <item quantity="other">Are you sure you wish to delete the folder \'%1$s\', including the %2$d items it contains? This action cannot be undone.</item>
    </plurals>
    <string name="settings">Settings</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="authenticationRequired">Authentication Required</string>
    <string name="invalidEmailPassword">Invalid email or password</string>
    <string name="loginId">Login ID</string>
    <string name="domain">Domain</string>
    <string name="sendFeedback">Send Feedback</string>
    <string name="sendMail">Send Email&#8230;</string>
    <string name="edit">Edit</string>
    <plurals name="item_count">
        <item quantity="one">%d item</item>
        <item quantity="other">%d items</item>
    </plurals>
    <string name="addToHomescreen">Add to Home</string>
    <string name="archive">Archive</string>
    <string name="moveToInbox">Move to Inbox</string>
    <string name="markAsUnread">Mark as Unread</string>
    <string name="selectPeopleInbox">Select People</string>
    <string name="delete">Delete</string>
    <string name="deleteEvent">Delete Event</string>
    <string name="selected">Selected</string>
    <string name="errorSendingMessage">An error occurred trying to send your message. Please try again.</string>
    <string name="errorPostingComment">An error occurred trying to post your submission comment. Please try again.</string>
    <string name="deletedConversation">That conversation has been deleted.</string>
    <string name="uploadAvatarFailMsg">New avatar picture failed to upload</string>
    <string name="editPhoto">Edit Photo</string>
    <string name="invalidUsername">That username is invalid.</string>
    <string name="usernameChangeSuccess">Username successfully updated!</string>
    <string name="takePhoto">Take photo</string>
    <string name="choosePhotoFromGallery">Choose photo from Gallery</string>
    <string name="fileNotFound">File not found.</string>
    <string name="reply">Reply</string>
    <string name="writeAMessage">Write a message…</string>
    <string name="compose">Compose</string>
    <string name="composeMessage">Compose Message</string>
    <string name="successSendingMessage">Message was successfully sent.</string>
    <string name="emptyMessage">The message cannot be blank!</string>
    <string name="noRecipients">No Recipients</string>
    <string name="send">Send</string>
    <string name="users">Users</string>
    <string name="individually">Individually</string>
    <string name="versionNum">Version:</string>
    <string name="version" formatted="false">v. %s</string>
    <string name="allCourses">All Courses</string>
    <string name="loading">Loading&#8230;</string>
	<string name="clickToViewSubmission">A snapshot of the website was taken when you turned it in. Tap and hold the image below to open or download the full image.</string>
	<string name="contentDescriptionPreviewImage">A preview of the submitted url</string>
    <string name="askInstructor">Ask Your Instructor a Question</string>
    <string name="askInstructorDetails">Questions are submitted to your instructor</string>
    <string name="searchGuides">Search the Canvas Guides</string>
    <string name="searchGuidesDetails">Find answers to common questions</string>
    <string name="reportProblem">Report a Problem</string>
    <string name="reportProblemDetails">If the app misbehaves, let us know</string>
    <string name="requestFeature">Request a Feature</string>
    <string name="requestFeatureDetails">Have an idea to improve the app?</string>
    <string name="shareYourLove">Share Your Love for the App</string>
    <string name="shareYourLoveDetails">Tell us about your favorite parts of the app</string>
</resources>