<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (C) 2016 - present Instructure, Inc.
  ~
  ~     This program is free software: you can redistribute it and/or modify
  ~     it under the terms of the GNU General Public License as published by
  ~     the Free Software Foundation, version 3 of the License.
  ~
  ~     This program is distributed in the hope that it will be useful,
  ~     but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~     MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~     GNU General Public License for more details.
  ~
  ~     You should have received a copy of the GNU General Public License
  ~     along with this program.  If not, see <http://www.gnu.org/licenses/>.
  ~
  -->

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipToPadding="false"
    android:scrollbarStyle="outsideOverlay">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/scrollInstructions"
        android:orientation="vertical"
        android:paddingBottom="24dp"
        android:paddingStart="24dp"
        android:paddingTop="18dp">

        <LinearLayout
            android:id="@+id/askInstructor"
            android:layout_width="match_parent"
            android:layout_height="?android:listPreferredItemHeight"
            android:background="@drawable/borderless_item_selector"
            android:gravity="center_vertical"
            android:orientation="vertical"
            android:paddingStart="16dp"
            android:paddingEnd="16dp">

            <TextView
                style="@style/TextStyle.Secondary.Dark"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/askInstructor" />

            <TextView
                style="@style/TextStyle.Tertiary"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/askInstructorDetails"
                android:textStyle="italic" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/searchGuides"
            android:layout_width="fill_parent"
            android:layout_height="?android:listPreferredItemHeight"
            android:layout_below="@id/askInstructor"
            android:background="@drawable/borderless_item_selector"
            android:gravity="center_vertical"
            android:orientation="vertical"
            android:paddingStart="16dp"
            android:paddingEnd="16dp">

            <TextView
                style="@style/TextStyle.Secondary.Dark"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/searchGuides" />

            <TextView
                style="@style/TextStyle.Tertiary"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/searchGuidesDetails"
                android:textStyle="italic" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/reportProblem"
            android:layout_width="fill_parent"
            android:layout_height="?android:listPreferredItemHeight"
            android:layout_below="@id/searchGuides"
            android:background="@drawable/borderless_item_selector"
            android:gravity="center_vertical"
            android:orientation="vertical"
            android:paddingStart="16dp"
            android:paddingEnd="16dp">

            <TextView
                style="@style/TextStyle.Secondary.Dark"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/reportProblem" />

            <TextView
                style="@style/TextStyle.Tertiary"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/reportProblemDetails"
                android:textStyle="italic" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/requestFeature"
            android:layout_width="fill_parent"
            android:layout_height="?android:listPreferredItemHeight"
            android:layout_below="@id/reportProblem"
            android:background="@drawable/borderless_item_selector"
            android:gravity="center_vertical"
            android:orientation="vertical"
            android:paddingStart="16dp"
            android:paddingEnd="16dp">

            <TextView
                style="@style/TextStyle.Secondary.Dark"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/requestFeature" />

            <TextView
                style="@style/TextStyle.Tertiary"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/requestFeatureDetails"
                android:textStyle="italic" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/shareLove"
            android:layout_width="fill_parent"
            android:layout_height="?android:listPreferredItemHeight"
            android:layout_below="@id/requestFeature"
            android:background="@drawable/borderless_item_selector"
            android:gravity="center_vertical"
            android:orientation="vertical"
            android:paddingStart="16dp"
            android:paddingEnd="16dp">

            <TextView
                style="@style/TextStyle.Secondary.Dark"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/shareYourLove" />

            <TextView
                style="@style/TextStyle.Tertiary"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/shareYourLoveDetails"
                android:textStyle="italic" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>