<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (C) 2016 - present Instructure, Inc.
  ~
  ~     This program is free software: you can redistribute it and/or modify
  ~     it under the terms of the GNU General Public License as published by
  ~     the Free Software Foundation, version 3 of the License.
  ~
  ~     This program is distributed in the hope that it will be useful,
  ~     but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~     MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~     GNU General Public License for more details.
  ~
  ~     You should have received a copy of the GNU General Public License
  ~     along with this program.  If not, see <http://www.gnu.org/licenses/>.
  ~
  -->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/canvasBackgroundWhite"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_alignParentTop="true"
        android:background="@color/defaultPrimary"
        android:elevation="6dp"
        app:popupTheme="@style/ToolBarPopupStyle"
        app:theme="@style/ToolBarStyle"
        tools:targetApi="lollipop" />

    <android.support.v4.widget.SwipeRefreshLayout
        android:id="@+id/swipeRefreshLayout"
        android:layout_below="@id/toolbar"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.instructure.pandarecycler.PandaRecyclerView
            android:id="@+id/listView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clipToPadding="false"
            android:cacheColorHint="@android:color/transparent"/>

    </android.support.v4.widget.SwipeRefreshLayout>

    <com.instructure.candroid.view.EmptyPandaView
        android:id="@+id/emptyPandaView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/addFolderFab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/addFileFab"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="8dp"
        android:contentDescription="@string/createAFolder"
        android:visibility="invisible"
        android:layout_marginEnd="16dp"
        app:elevation="4dp"
        app:srcCompat="@drawable/vd_files" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/addFileFab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/addFab"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="8dp"
        android:contentDescription="@string/createAFile"
        android:visibility="invisible"
        android:layout_marginEnd="16dp"
        app:elevation="4dp"
        app:srcCompat="@drawable/vd_file_upload" />


    <android.support.design.widget.FloatingActionButton
        android:id="@+id/addFab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:contentDescription="@string/createFileFolderFabContentDesc"
        app:elevation="4dp"
        app:srcCompat="@drawable/vd_add" />

</RelativeLayout>
