<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (C) 2016 - present Instructure, Inc.
  ~
  ~     This program is free software: you can redistribute it and/or modify
  ~     it under the terms of the GNU General Public License as published by
  ~     the Free Software Foundation, version 3 of the License.
  ~
  ~     This program is distributed in the hope that it will be useful,
  ~     but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~     MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~     GNU General Public License for more details.
  ~
  ~     You should have received a copy of the GNU General Public License
  ~     along with this program.  If not, see <http://www.gnu.org/licenses/>.
  ~
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/canvasBackgroundWhite">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?android:actionBarSize"
        android:background="@color/defaultPrimary"
        android:elevation="6dp"
        app:popupTheme="@style/ToolBarPopupStyle"
        app:theme="@style/ToolBarStyle"
        tools:targetApi="lollipop" />

    <LinearLayout
        android:id="@+id/submittedWebsiteLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:minHeight="?android:attr/listPreferredItemHeight"
        android:orientation="vertical">

        <Button
            android:id="@+id/urlButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"/>
        
    </LinearLayout>

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/dividerColor" />

    <LinearLayout
        android:id="@+id/previewImageLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:minHeight="?android:attr/listPreferredItemHeight"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/submittedImage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/clickToViewSubmission"
            android:textSize="14sp"
            android:paddingEnd="16dp"
            android:paddingStart="16dp"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/loadingLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:minHeight="?android:attr/listPreferredItemHeight"
        android:orientation="vertical" >

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/loadingText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/loading"
            android:gravity="center"
            android:layout_marginStart="8dp"
            style="@style/TextStyle.Primary"/>

    </LinearLayout>

    <ImageView
        android:id="@+id/previewImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:contentDescription="@string/contentDescriptionPreviewImage"/>

</LinearLayout>